--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="description_not_available">Описание отсутствует..</string>
+    <string name="Trainings">Тренировки</string>
+    <string name="default_description">Описание отсутствует.</string>
 </resources>
